// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common - GetDataToLinkImage When section is home with Apertura Return Array with imageResizedUrls 1`] = `
NodeList [
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/0-_Q3j7WaTgvazaqaWo1TlsdFYg=/768x512/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(min-width: 768.1px and max-width: 1024px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/v0nB_sKZ3HeDxcpmmYhzX6P49i0=/375x562/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(min-width: 375.1px and max-width: 768px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/FtoYG9gG-lYJTikOJudK9UNhnWA=/320x480/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(max-width: 375px)"
    rel="preload"
  />,
]
`;

exports[`Common - GetDataToLinkImage When section is home with Apertura Return array images resized from video 1`] = `
NodeList [
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/j4pw7953Ek5Kvgd5_tkGsexuFSM=/298x198/smart/filters:format(webp):quality(80)/d3us6z9haan6vf.cloudfront.net/11-23-2021/t_e27fe874604b4ba4b7a9de68ea999a82_name_file_1280x720_2000_v3_1_.jpg"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/SMlVVLdoFaVHpNeiawm1qesVk7E=/318x212/smart/filters:format(webp):quality(80)/d3us6z9haan6vf.cloudfront.net/11-23-2021/t_e27fe874604b4ba4b7a9de68ea999a82_name_file_1280x720_2000_v3_1_.jpg"
    rel="preload"
  />,
]
`;

exports[`Common - GetDataToLinkImage When section is home with Bomba Visible with imageId, return Array with imageResizedUrls 1`] = `
NodeList [
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/0-_Q3j7WaTgvazaqaWo1TlsdFYg=/768x512/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(min-width: 768.1px and max-width: 1024px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/v0nB_sKZ3HeDxcpmmYhzX6P49i0=/375x562/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(min-width: 375.1px and max-width: 768px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/FtoYG9gG-lYJTikOJudK9UNhnWA=/320x480/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(max-width: 375px)"
    rel="preload"
  />,
]
`;

exports[`Common - GetDataToLinkImage When section is home with Bomba Visible with noteId, return Array with imageResizedUrls 1`] = `
NodeList [
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/0-_Q3j7WaTgvazaqaWo1TlsdFYg=/768x512/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(min-width: 768.1px and max-width: 1024px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/v0nB_sKZ3HeDxcpmmYhzX6P49i0=/375x562/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(min-width: 375.1px and max-width: 768px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/FtoYG9gG-lYJTikOJudK9UNhnWA=/320x480/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/H53R624KARDARCICFNEC7ZC7YA.jpg"
    media="(max-width: 375px)"
    rel="preload"
  />,
]
`;

exports[`Common - GetDataToLinkImage When section is note, STORYTELLING with promo_items.storytelling_mobile, return mobile preload 1`] = `
NodeList [
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/TH-VryessnZukr7fPtHGAp_SeKc=/879x586/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(min-width: 1280.1px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/Gx0v-uWdmqOZawzhVCa09zILHio=/1119x746/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(min-width: 1024.1px and max-width: 1280px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/AtNn5RZblCnaBE4JRqbP8O5lCyw=/768x512/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(max-width: 1024px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/TH-VryessnZukr7fPtHGAp_SeKc=/879x586/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(min-width: 1280.1px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/Gx0v-uWdmqOZawzhVCa09zILHio=/1119x746/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(min-width: 1024.1px and max-width: 1280px)"
    rel="preload"
  />,
]
`;

exports[`Common - GetDataToLinkImage When section is note, STORYTELLING without promo_items.storytelling_mobile, return desk preload 1`] = `
NodeList [
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/TH-VryessnZukr7fPtHGAp_SeKc=/879x586/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(min-width: 1280.1px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/Gx0v-uWdmqOZawzhVCa09zILHio=/1119x746/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(min-width: 1024.1px and max-width: 1280px)"
    rel="preload"
  />,
  <link
    as="image"
    fetchpriority="high"
    href="https://resizer.glanacion.com/resizer/AtNn5RZblCnaBE4JRqbP8O5lCyw=/768x512/smart/filters:quality(80)/cloudfront-us-east-1.images.arcpublishing.com/sandbox.lanacionar/UE652CZMVBB3ROMJOPCJABEESU.jpg"
    media="(max-width: 1024px)"
    rel="preload"
  />,
]
`;
